added upload form

--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'upload_form'%>
+
 <h1>Listing drawings</h1>
 
 <table>
@@ -16,12 +18,8 @@
     <td><%= drawing.location %></td>
     <td><%= drawing.drawing %></td>
     <td><%= link_to 'Show', drawing %></td>
-    <td><%= link_to 'Edit', edit_drawing_path(drawing) %></td>
-    <td><%= link_to 'Destroy', drawing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
-
-<%= link_to 'New Drawing', new_drawing_path %>
